# snapshot_manager

./: Cargo.toml  README.md  snapshot_manager.service
assets/: snapshot_manager.service  whitelist.template
src/: main.rs
